Fix layout problem, Refactor css file to apply white space all p tags.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,3 +17,8 @@ body {
 .modal-box {
     @apply p-0 py-2 !important;
 }
+
+p {
+    word-break: break-all;
+    white-space: normal;
+}
